...
                </TouchableOpacity>

                <TouchableOpacity onPress={logoutHandler}>
                    <View style={[Styles.buttonContainer, { marginBottom: 20, paddingRight: 10 }]}>
                        <View style={{ flexDirection: 'row', alignItems: 'center' }}>
                            <Ionicons name="log-out-outline" size={responsiveScreenWidth(8)} color="#686868" />
                            <Text testID='logoutButton' style={[Styles.buttonText, isDarkThemeEnabled ? { color: '#DBDBDB' } : { color: '#505050' }]}>Cerrar sesión</Text>
                        </View>
                        <Ionicons name="chevron-forward" size={responsiveScreenWidth(8)} color="#686868" />
                    </View>
                </TouchableOpacity>
            </ScrollView>
        </View>
...
